--- a/environment.yml
+++ b/environment.yml
@@ -1,4 +1,4 @@
-name: paper_env
+name: scat_clustering
 channels:
   - pytorch
   - defaults
@@ -16,4 +16,3 @@ dependencies:
     - hnswlib==0.4.0
     - kymatio==0.2.0
     - tqdm==4.52.0
-prefix: /home/corrales/anaconda3/envs/paper_env
